<resources>
    <string name="app_name">BaltiWatch</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_report">report</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_report">Reports</string>
    <string name="menu_neighborhood">My Neighborhood</string>
    <string name="menu_verify">Verification</string>
    <string name="menu_rewards">Rewards</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="missing_email">Please Enter Valid Email</string>
    <string name="missing_pwd">Please Enter Password</string>
    <string name="minimum_pwd">Min Password Length is 6 Characters</string>
    <string name="access_denied">Failed to Authenticate</string>
    <string name="sign_up_fail">Failed to Authenticate</string>
    <string name="bad_pwd">Password Minimum 6 Characters</string>
    <string name="same_pwd">Duplicate Of Previous Password</string>
    <string name="change_pwd_dialogue">Change Password</string>
    <string name="change_pwd_logout">Are you sure you want to change your password?</string>
    <string name="confirm">Yes, I\'m sure</string>
    <string name="pwd_update_success">Password Change Successful</string>
    <string name="pwd_update_fail">Failed To Authenticate Password</string>
    <string name="negative">No</string>
    <string name="bad_uname">No Username Entered</string>
    <string name="change_uname_msg">This will change your display name... Proceed?</string>
    <string name="change_uname">Change Username</string>
    <string name="username_placeholder" />
    <string name="sign_out_dialog">Sign Out</string>
    <string name="sign_out_confirm">Are you sure you want to sign out?</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_account_confirm">Account Deletion Is Permanent. Are you sure?</string>
    <string name="delete_account_failure">ERROR: Failed to Delete Account. Try Signing In Again First.</string>
    <string name="change_password">Change Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="new_username">New Username</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirmtxt">Confirm</string>
</resources>
