<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_doc_document"
            android:title="@string/menu_report" />
        <item
            android:id="@+id/nav_neighborhood"
            android:icon="@drawable/home4x"
            android:title="@string/menu_neighborhood" />
        <item
            android:id="@+id/nav_verify"
            android:icon="@drawable/check4x"
            android:title="@string/menu_verify" />
        <item
            android:id="@+id/nav_rewards"
            android:icon="@drawable/badge4x"
            android:title="@string/menu_rewards" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
