<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorAccent"
    android:fitsSystemWindows="true"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top|left"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:id="@+id/profileImageLayout"
            android:layout_width="480dp"
            android:layout_height="fill_parent"
            android:gravity="center|left">


            <ImageView
                android:id="@+id/profPicView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:clickable="true"
                android:cropToPadding="false"
                android:maxHeight="250dip"
                android:scaleType="centerCrop"

                android:visibility="visible" />

            <TextView
                android:id="@+id/profPicViewText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/profPicView"
                android:layout_alignTop="@+id/profPicView"
                android:layout_alignRight="@id/profPicView"
                android:layout_alignBottom="@id/profPicView"
                android:background="#A629434E"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="center"
                android:text="Upload Profile Image"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:textStyle="bold"
                android:visibility="invisible" />

        </RelativeLayout>

        <ProgressBar
            android:id="@+id/uploadProgress"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible" />

        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|top"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/activity_horizontal_margin">

                <TextView
                    android:id="@+id/u_name_disp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username_placeholder"
                    android:textAlignment="textStart"
                    android:textColor="@color/title"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_change_uName"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="5dip"
                    android:background="@color/colorAccentDark"
                    android:paddingLeft="10dip"
                    android:paddingRight="10dip"
                    android:text="@string/change_uname"
                    android:textColor="@android:color/white" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:visibility="gone">

                    <EditText
                        android:id="@+id/newUName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint=""
                        android:inputType="text"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"
                        tools:visibility="gone" />

                </com.google.android.material.textfield.TextInputLayout>
                <Button
                    android:id="@+id/btn_change_uname_confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:layout_marginBottom="5dip"
                    android:background="@color/colorAccentDark"
                    android:text="@string/confirmtxt"
                    android:textColor="@android:color/white"
                    tools:visibility="gone" />

                <Button
                    android:id="@+id/btn_change_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="5dip"
                    android:background="@color/colorAccentDark"
                    android:paddingLeft="10dip"
                    android:paddingRight="10dip"
                    android:text="@string/change_password"
                    android:textColor="@android:color/white" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:visibility="gone">

                    <EditText
                        android:id="@+id/pwd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/old_password"
                        android:inputType="textPassword"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:visibility="gone">

                    <EditText
                        android:id="@+id/newPwd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:hint="@string/new_password"
                        android:inputType="textPassword"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white" />

                </com.google.android.material.textfield.TextInputLayout>
                <Button
                    android:id="@+id/btn_change_pwd_confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@color/colorAccentDark"
                    android:text="@string/confirmtxt"
                    android:textColor="@android:color/white"
                    tools:visibility="gone" />

                <Button
                    android:id="@+id/btn_sign_out"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dip"
                    android:background="@color/colorAccentDark"
                    android:text="@string/sign_out"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/btn_delete_account"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginTop="5dip"
                    android:background="@null"
                    android:text="@string/delete_account"
                    android:textAllCaps="false"
                    android:textColor="@android:color/holo_red_dark" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
